Fixed brand-heading text truncating issue
When scrolling first time in screen having max-width 1199px.

--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -374,6 +374,9 @@ a:focus {
     ul.banner-social-buttons {
         margin-top: 15px;
     }
+    .container > .row > .col-md-8 {
+        padding-top: 10px;
+    }
 }
 
 @media (max-width: 767px) {
